--- a/index.html
+++ b/index.html
@@ -372,8 +372,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>ВЫПУСКНОЙ</h1>
-            <div class="hoo">HOO</div>
+            <h1>ВЫПУСКНОО '25</h1>
             <div class="subtitle">+ vibe activity</div>
         </div>
         
